[gd_scene format=3 uid="uid://b4fthgi01t85q"]

[ext_resource type="PackedScene" uid="uid://bwrbxvwsy3t1s" path="res://scenes/ui/common/title_screen_button.tscn" id="1_3nk0q"]
[ext_resource type="Script" uid="uid://sb0xgc8x2pq7" path="res://scenes/ui/main screens/title_screen.gd" id="1_7l2eb"]
[ext_resource type="PackedScene" uid="uid://brgmqf6a1nqe2" path="res://scenes/ui/main screens/settings_screen.tscn" id="2_nx1ut"]

[node name="title_screen" type="Control" unique_id=568898072]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7l2eb")
settings_screen = ExtResource("2_nx1ut")
metadata/_custom_type_script = "uid://ctkomftwtsoo7"

[node name="Layout" type="VBoxContainer" parent="." unique_id=1026040679]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -74.0
offset_right = 40.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="Play Button" parent="Layout" unique_id=1491602402 instance=ExtResource("1_3nk0q")]
layout_mode = 2
text = "Play"

[node name="Settings Button" parent="Layout" unique_id=849526304 instance=ExtResource("1_3nk0q")]
layout_mode = 2
text = "Settings"

[node name="TitleScreenButton3" parent="Layout" unique_id=434426161 instance=ExtResource("1_3nk0q")]
layout_mode = 2
text = "Credits"

[node name="TitleScreenButton4" parent="Layout" unique_id=1704301841 instance=ExtResource("1_3nk0q")]
layout_mode = 2
text = "Exit"

[connection signal="on_close" from="." to="." method="_on_close"]
[connection signal="on_focus_leave" from="." to="." method="_on_focus_leave"]
[connection signal="on_focus_return" from="." to="." method="_on_focus_return"]
[connection signal="pressed" from="Layout/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Layout/Settings Button" to="." method="_on_settings_button_pressed"]
